bug 302275: newly added news server's default charset does not inherit from mailnews.view_default_charset localized preference patch by Shaohua Wen (r=jshin, sr=bienvenu, a=benjamin)